# cc-assistant

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
scripts/: install-task-scheduler.ps1  run-daemon.bat  trim_task.py  uninstall-task-scheduler.ps1
skills/: rules.md
src/: cli.py  config.py  lifecycle.py  models.py  runner.py
src/agent/: context.py  cycle_state.py  factory.py  orchestrator.py  tool_bridge.py
src/board/: bootstrap.py  manager.py  parser.py  project_handler.py  project_parser.py  writer.py
src/dispatcher/: coordinator.py  scheduler.py  watcher.py
src/logging/: structured.py
src/rules/: loader.py
src/tools/: __init__.py  (+8 more)
tasks/: README.md
tests/: test_bootstrap.py  test_cli.py  test_cli_entrypoint.py  test_config.py  test_context_builder.py  test_coordinator.py  test_cycle_state.py  test_dispatcher_integration.py  test_enrich_minimal_task.py  test_integration.py  test_lifecycle.py  test_llm_claude.py  test_llm_claude_cli.py  test_llm_claude_real.py  test_llm_factory.py  test_llm_router.py  test_llm_types.py  test_logger.py  test_manager.py  test_models.py  test_orchestrator.py  test_orchestrator_integration.py  test_packaging.py  test_parser.py  test_project_handler.py  test_project_parser.py  test_rules_loader.py  test_runner.py  test_scheduler.py  test_tool_api_caller.py  test_tool_base.py  test_tool_bridge.py  test_tool_code_edit.py  test_tool_database.py  test_tool_file_ops.py  test_tool_notifier.py  test_tool_registry.py  test_tool_shell.py  test_tool_web_fetch.py  test_watcher.py  (+1 more)
(+34 files in other folders)
