[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-assistant"
version = "0.1.0"
description = "Local AI Task Automation Agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-frontmatter>=1.1",
    "python-dotenv>=1.0",
    "watchdog>=4.0",
    "apscheduler>=3.10",
    "anthropic>=0.40",
    "httpx>=0.27",
    "aiomysql>=0.2",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cc-assistant = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
